...

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                        <Button
                            android:id = "@+id/myLibrary"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="My Library"
                            android:textAllCaps="false"/>

                        <Button
...
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Albums"
                            android:textAllCaps="false"/>

                        <Button
                            android:id = "@+id/likedSongs"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Liked Songs"
                            android:textAllCaps="false"/>
                </LinearLayout>
        </RelativeLayout>
...
