<?xml version="1.0" encoding="UTF-8"?>
<android.support.constraint.ConstraintLayout
        tools:context=".presentation.activities.NowPlayingMusicActivity"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20sp"
            android:gravity="center"
            android:textSize="20sp"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/album"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20sp"
            android:gravity="center"
            android:textSize="20sp"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/artist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20sp"
            android:gravity="center"
            android:textSize="20sp"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/genre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20sp"
            android:gravity="center"
            android:textSize="20sp"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:translationY="120sp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40sp"
                android:src="@drawable/ic_volume_up_black_24dp"
                android:contentDescription="Volume Icon" />

            <SeekBar
                android:id="@+id/seekBarForVolume"
                android:layout_width="256sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="5sp" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="36sp"
            android:paddingRight="16sp"
            android:paddingLeft="16sp"
            android:translationY="160sp">

            <ImageView
                android:id="@+id/likeImg"
                android:layout_width="36sp"
                android:layout_height="36sp"
                android:src="@drawable/ic_favorite_border_black_24dp" />

            <ImageView
                android:id="@+id/shuffleImg"
                android:layout_width="36sp"
                android:layout_height="36sp"
                android:layout_marginStart="20sp"
                android:src="@drawable/shuffle"
                android:layout_alignParentEnd="true"/>

            <SeekBar
                android:id="@+id/seekBarForMusic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50sp"
                android:layout_marginRight="50sp"
                android:translationY="6sp" />
        </RelativeLayout>

    </LinearLayout>

    <include layout="@layout/playback_layout"/>

</android.support.constraint.ConstraintLayout>