...
                android:id="@+id/list_songs_fragment"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_width="match_parent"/>

            <LinearLayout
                android:id="@+id/confirm_button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:gravity="center_horizontal">
                <ImageView
                    android:layout_width="wrap_content"
...
