<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:background="@color/colorButtonBgLight"
    android:orientation="horizontal"
    app:layout_constraintBottom_toBottomOf="parent">

    <ImageButton
        android:id="@+id/skip_back_button"
        android:layout_width="0dp"
        android:layout_weight = "1"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/skip_previous"
        android:padding="10dp"
        android:scaleType="fitCenter"
        />

    <ImageButton
        android:id="@+id/play_button"
        android:layout_width="0dp"
        android:layout_weight = "1"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/play"
        android:padding="10dp"
        android:scaleType="fitCenter"
        />

    <ImageButton
        android:id="@+id/pause_button"
        android:layout_weight = "1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/pause"
        android:padding="10dp"
        android:scaleType="fitCenter"
        />

    <ImageButton
        android:id="@+id/back_button"
        android:layout_weight = "1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/previous"
        android:padding="10dp"
        android:scaleType="fitCenter"
        />

    <ImageButton
        android:id="@+id/skip_button"
        android:layout_width="0dp"
        android:layout_weight = "1"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/skip_next"
        android:padding="10dp"
        android:scaleType="fitCenter"
        />

</LinearLayout>